--- a/smart_house/core/templates/core/control.html
+++ b/smart_house/core/templates/core/control.html
@@ -19,8 +19,10 @@
 <body>
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="{% url 'form' %}">
+        <img src="https://onix-systems.com/static/images/common/logo.jpg" class="d-inline-block align-top"
+             height="60">
         <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Django_logo.svg" class="d-inline-block align-top"
-             height="30">
+             height="60">
     </a>
 </nav>
 <div class="container-fluid">
